   by Padraic. [MG]
 * The test harness code strips trailing whitespace before attempting to match
   against expected results, making it easier to use bounded regexps. [SW]
 * @destination (for variable exits) is now a standard attribute, and has
   a helpfile. [MG]
 * Sound is now propagated through audible variable exits. Suggested by 
   Mercutio. [SW]

Commands:
 * Added @mail/review for reading mail you've sent, and @mail/retract for
   deleting unread mail that you sent. Idea from MUX. Patch by Minion.

Fixes:
 * lit() didn't properly handle '\'s. Reported by Wiggles. [MG]
 * listq() incorrectly returned all registers (including %0-%9, %i0, etc),
   not just %q-registers. Reported by Wiggles. [MG]
 * The mud_url code didn't always work correctly in Firefox because http
   headers weren't sent. [MG]
 * %0 and %1 arguments weren't properly passed through verb attributes after
   a change in p8. Reported by Padraic. [MG]
 * Fix really stupid copy-and-paste error in magic sorts on strings with
   ANSI, which broke setinter() and friends. Reported by Minion. [MG]
 * Help fixes by Wiggles, Mouvar and others. [MG]
 * Memory leak in ldelete() fixed. [MG]
 * Fix a crashbug reported by Minion. [MG]
 * Sorting functions now ignore ANSI when sorting a string as a number
   or dbref. From report by Mouvar. [MG]
 * strreplace() was broken for overly long length arguments. Reported
   by Ashen-Shugar.  [SW]
 * Compile errors on Windows with OpenSSL. Reported by Daniko. 

Version 1.8.4 patchlevel 8                                 Nov 11, 2011

Major changes:
 * ssl_slave is enabled by default by configure if OpenSSL and
  libevent2 are present. Passing --disable-ssl_slave to configure will
  still disable it. [SW]
 * The newline_one_char config option has been removed -- %r now
   always returns a single-char newline (\n). [MG]
 * Microsoft Visual Studio 2010 project files contributed by Daniko.

Minor changes:
 * crunch_code and crypt_code in funcrypt.c are no longer